align drop down menu titles left and fix desktop display

--- a/src/components/caterHistoryNews/caterHistoryNews.css
+++ b/src/components/caterHistoryNews/caterHistoryNews.css
@@ -7,6 +7,9 @@
 .collapsible{
     display: none;
 }
+.wrap-collapsible-Cater{
+    display: none;
+}
 .caterBlock-mobile{
     display: none;
 }
@@ -287,7 +290,8 @@
      display: none;
  }
 
- .wrap-collapsible {
+ .wrap-collapsible-Cater {
+    display: block;
     margin-bottom: 1.2rem 0;
   }
   
