--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -222,7 +222,7 @@ i {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 1.2rem;
     text-transform: uppercase;
-    text-align: center;
+    /* text-align: center; */
   
     padding: 1rem;
   
